# FrostEngine

./: .gitignore  CMakeLists.txt
Graphics/: CMakeLists.txt
Graphics/include/Core/Graphics/: GraphicEngineBase.h  GraphicEngineDirectX.h  GraphicEngineOpenGL.h  Graphics.h  Window.h  graphic_engine_base.h  graphic_engine_directx.h  window_event_manager.h
Graphics/include/Core/Graphics/materials/: material_base.h
Graphics/include/Core/Graphics/shapes/: drawable.h  shape_base.h  simple_triangle2d.h
Graphics/src/: GraphicEngineDirectX.cpp  GraphicEngineOpenGL.cpp  Graphics.cpp  Window.cpp  graphic_engine_directx.cpp  material_base.cpp  shape_base.cpp  simple_triangle2d.cpp  window_event_manager.cpp
Lib/: CMakeLists.txt
Lib/include/Core/: Core.h  Exceptions.h  Log.h  Movable.h  Text.h  Transformable.h  memory.h  utilities.h
Lib/include/Core/Lib/: Lib.h
Lib/src/: Lib.cpp
Tests/: CMakeLists.txt  GraphicsTests.h  LibTests.h  graphic.cpp  graphics_tests.h  tests.cpp
shaders/: shader.fx
